# freebox_ddns

./: README.md  config.example.yaml  pyproject.toml
openwrt/: freebox-ddns
src/freebox_ddns/: __main__.py  config.py  dyndns.py  updater.py
